--- a/index.html
+++ b/index.html
@@ -1,38 +1,40 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portofolio PinzzYapp</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Portofolio Pinzz Yapp</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
-    <nav>
-      <a href="index.html" class="logo">🌟 Portofolio</a>
-      <ul>
-        <li><a href="index.html" class="active">Beranda</a></li>
-        <li><a href="about.html">Tentang Saya</a></li>
-        <li><a href="projects.html">Project</a></li>
-        <li><a href="contact.html">Kontak</a></li>
-      </ul>
-    </nav>
-  </header>
+  <!-- Navbar -->
+  <nav class="navbar">
+    <a href="index.html" class="logo">Pinzz Yapp</a>
+    <ul class="nav-links">
+      <li><a href="index.html" class="active">Beranda</a></li>
+      <li><a href="about.html">Tentang Saya</a></li>
+      <li><a href="projects.html">Project</a></li>
+      <li><a href="contact.html">Kontak</a></li>
+    </ul>
+  </nav>
 
-  <section class="landing">
-    <img src="https://via.placeholder.com/180" alt="Foto Profil" class="profile-pic">
-    <h1>Ola, I'm PinzzYapp</h1>
-    <p>Selamat datang di portofolio baru saya! Saya seorang web developer yang fokus membuat desain modern, kreatif, dan responsif.</p>
-
-    <div class="menu-buttons">
-      <a href="contact.html" class="btn big">Kontak</a>
-      <a href="about.html" class="btn big">Tentang Saya</a>
-      <a href="projects.html" class="btn big">Project</a>
+  <!-- Hero Section -->
+  <section class="hero">
+    <img src="https://via.placeholder.com/180" alt="Foto Profil">
+    <h1>Ola, I'm Pinzz Yapp</h1>
+    <p>Selamat datang di portofolio saya! Saya seorang programmer yang fokus pada pengembangan web modern. 
+    Di sini Anda bisa melihat informasi tentang saya, project yang pernah saya buat, dan cara menghubungi saya.</p>
+    
+    <div class="hero-buttons">
+      <a href="contact.html">Kontak</a>
+      <a href="about.html">Tentang Saya</a>
+      <a href="projects.html">Project</a>
     </div>
   </section>
 
+  <!-- Footer -->
   <footer>
-    <p>© 2025 PinzzYapp - Apcb</p>
+    <p>&copy; 2025 Pinzz Yapp.</p>
   </footer>
 </body>
 </html>
