--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Portofolio Pinzz Yapp</title>
   <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
+
   <!-- Navbar -->
   <nav class="navbar">
     <a href="index.html" class="logo">Pinzz Yapp</a>
     <ul class="nav-links">
-      <li><a href="index.html" class="active">Beranda</a></li>
       <li><a href="about.html">Tentang Saya</a></li>
       <li><a href="projects.html">Project</a></li>
       <li><a href="contact.html">Kontak</a></li>
@@ -20,21 +21,23 @@
 
   <!-- Hero Section -->
   <section class="hero">
-    <img src="https://via.placeholder.com/180" alt="Foto Profil">
+    <img src="https://via.placeholder.com/180" alt="Foto Profil" />
     <h1>Ola, I'm Pinzz Yapp</h1>
-    <p>Selamat datang di portofolio saya! Saya seorang programmer yang fokus pada pengembangan web modern. 
-    Di sini Anda bisa melihat informasi tentang saya, project yang pernah saya buat, dan cara menghubungi saya.</p>
-    
-    <div class="hero-buttons">
-      <a href="contact.html">Kontak</a>
+    <p>
+      Selamat datang di portofolio baru saya!  
+      Saya seorang developer yang fokus di pemrograman web modern dan desain UI yang elegan.
+    </p>
+    <div class="buttons">
       <a href="about.html">Tentang Saya</a>
       <a href="projects.html">Project</a>
+      <a href="contact.html">Kontak</a>
     </div>
   </section>
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2025 Pinzz Yapp.</p>
+    <p>© 2025 Pinzz Yapp. Semua Hak Dilindungi.</p>
   </footer>
+
 </body>
 </html>
