--- a/index.html
+++ b/index.html
@@ -4,40 +4,92 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Portofolio Pinzz Yapp</title>
-  <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+      color: white;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      text-align: center;
+      padding: 20px;
+    }
+
+    img {
+      width: 150px;
+      height: 150px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 3px solid #00bcd4;
+      margin-bottom: 20px;
+    }
+
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 10px;
+    }
+
+    p {
+      font-size: 1.1rem;
+      margin-bottom: 30px;
+      max-width: 600px;
+    }
+
+    .button-group {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 15px;
+      justify-content: center;
+    }
+
+    .btn {
+      background-color: #00bcd4;
+      padding: 12px 28px;
+      border: none;
+      border-radius: 8px;
+      color: white;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: 0.3s;
+      text-decoration: none;
+    }
+
+    .btn:hover {
+      background-color: #0097a7;
+    }
+
+    @media (max-width: 500px) {
+      h1 {
+        font-size: 1.8rem;
+      }
+
+      .btn {
+        width: 100%;
+        text-align: center;
+      }
+    }
+  </style>
 </head>
 <body>
 
-  <!-- Navbar -->
-  <nav class="navbar">
-    <a href="index.html" class="logo">Pinzz Yapp</a>
-    <ul class="nav-links">
-      <li><a href="about.html">Tentang Saya</a></li>
-      <li><a href="projects.html">Project</a></li>
-      <li><a href="contact.html">Kontak</a></li>
-    </ul>
-  </nav>
+  <img src="assets/profile.jpg" alt="Foto Profil" />
+  <h1>Ola, I'm Pinzz Yapp</h1>
+  <p>Selamat datang di website portofolio saya. Klik salah satu tombol di bawah untuk melihat lebih lanjut.</p>
 
-  <!-- Hero Section -->
-  <section class="hero">
-    <img src="https://via.placeholder.com/180" alt="Foto Profil" />
-    <h1>Ola, I'm Pinzz Yapp</h1>
-    <p>
-      Selamat datang di portofolio baru saya!  
-      Saya seorang developer yang fokus di pemrograman web modern dan desain UI yang elegan.
-    </p>
-    <div class="buttons">
-      <a href="about.html">Tentang Saya</a>
-      <a href="projects.html">Project</a>
-      <a href="contact.html">Kontak</a>
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <footer>
-    <p>© 2025 Pinzz Yapp. Semua Hak Dilindungi.</p>
-  </footer>
+  <div class="button-group">
+    <a href="tentang.html" class="btn">Tentang Saya</a>
+    <a href="project.html" class="btn">Project</a>
+    <a href="kontak.html" class="btn">Kontak</a>
+  </div>
 
 </body>
 </html>
