--- a/tentang.html
+++ b/tentang.html
@@ -30,7 +30,7 @@
 </head>
 <body>
 
-  <img src="assets/profile.jpg" alt="Foto Profil" />
+  <img src="https://i.imgur.com/abc123.jpg" alt="Foto Profil" />
   <h1>Pinzz Yapp</h1>
   <p>Jenis Domain: <b>.web.id</b></p>
   <p>Saya adalah seorang pengembang web yang berfokus pada pembuatan aplikasi modern, responsif, dan fungsional.</p>
