--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
 <body>
 
   <img src="assets/profile.jpg" alt="Foto Profil" />
-  <h1>Cosmos</h1>
+  <h1>Pinzz Yapp</h1>
   <p>Jenis Domain: <b>.web.id</b></p>
   <p>Saya adalah seorang pengembang web yang berfokus pada pembuatan aplikasi modern, responsif, dan fungsional.</p>
   
