--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 </head>
 <body>
 
-  <img src="https://i.imgur.com/abc123.jpg" alt="Foto Profil" />
+  <img src="assets/profile.jpg" alt="Foto Profil" />
   <h1>Ola, I'm Pinzz Yapp</h1>
   <p>Selamat datang di website portofolio saya. Klik salah satu tombol di bawah untuk melihat lebih lanjut.</p>
 
