--- a/contact.html
+++ b/contact.html
@@ -761,7 +761,7 @@
                         <div class="contact-icon">📧</div>
                         <div class="contact-content">
                             <h4>Email</h4>
-                            <p><a href="mailto:hello@portfolio.com">hello@portfolio.com</a></p>
+                            <p><a href="mailto:viosdevsonic@gmail.com">viosdevsonic@gmail.com</a></p>
                             <p>Typically replies within 24 hours</p>
                         </div>
                     </div>
@@ -770,7 +770,7 @@
                         <div class="contact-icon">📞</div>
                         <div class="contact-content">
                             <h4>Phone</h4>
-                            <p><a href="tel:+1234567890">+1 (234) 567-890</a></p>
+                            <p><a href="tel:+6282313746307">+62 823-1374-6307</a></p>
                             <p>Mon-Fri from 9am to 6pm</p>
                         </div>
                     </div>
@@ -780,7 +780,7 @@
                         <div class="contact-content">
                             <h4>Location</h4>
                             <p>123 Creative Street</p>
-                            <p>Innovation City, IC 12345</p>
+                            <p>45 Ponorogo Jawa Timur, Indonesia</p>
                         </div>
                     </div>
 
@@ -789,7 +789,7 @@
                         <div class="contact-content">
                             <h4>Availability</h4>
                             <p>Available for freelance projects</p>
-                            <p>Starting new projects in January 2024</p>
+                            <p>Starting new projects in Agustus 2025</p>
                         </div>
                     </div>
                 </div>
@@ -854,7 +854,7 @@
                 <div class="map-placeholder">
                     <div class="map-placeholder-icon">🗺️</div>
                     <p>Interactive map would be displayed here</p>
-                    <p>📍 123 Creative Street, Innovation City</p>
+                    <p>📍 45 Ponorogo Jawa Timur, Indonesia</p>
                 </div>
             </div>
         </div>
@@ -947,7 +947,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="footer-content">
-            <a href="index.html" class="footer-logo">Portfolio</a>
+            <a href="index.html" class="footer-logo">PinzzYap</a>
             
             <nav class="footer-nav">
                 <a href="index.html">Home</a>
@@ -965,7 +965,7 @@
             </div>
 
             <div class="footer-bottom">
-                <p>© 2024 Creative Developer. All rights reserved.</p>
+                <p>© 2025 Creative Developer. All rights reserved.</p>
                 <p>Designed and developed with ❤️</p>
             </div>
         </div>
