--- a/contact.html
+++ b/contact.html
@@ -727,10 +727,10 @@
     <!-- Navigation -->
     <nav class="nav" id="nav">
         <div class="nav-content">
-            <a href="index.html" class="logo">Portfolio</a>
+            <a href="index.html" class="logo">PinzzYap</a>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="project.html">Projects</a></li>
+                <li><a href="projects.html">Projects</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="skills.html">Skills</a></li>
                 <li><a href="contact.html" class="active">Contact</a></li>
