--- a/projects.html
+++ b/projects.html
@@ -624,10 +624,10 @@
     <!-- Navigation -->
     <nav class="nav" id="nav">
         <div class="nav-content">
-            <a href="index.html" class="logo">Portfolio</a>
+            <a href="index.html" class="logo">PinzzYap</a>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="project.html" class="active">Projects</a></li>
+                <li><a href="projects.html" class="active">Projects</a></li>
                 <li><a href="index.html#about">About</a></li>
                 <li><a href="index.html#skills">Skills</a></li>
                 <li><a href="index.html#contact">Contact</a></li>
