--- a/contact.html
+++ b/contact.html
@@ -951,7 +951,7 @@
             
             <nav class="footer-nav">
                 <a href="index.html">Home</a>
-                <a href="project.html">Projects</a>
+                <a href="projects.html">Projects</a>
                 <a href="about.html">About</a>
                 <a href="skills.html">Skills</a>
                 <a href="contact.html">Contact</a>
