--- a/projects.html
+++ b/projects.html
@@ -680,7 +680,7 @@
                         <span class="tag">Stripe</span>
                     </div>
                     <div class="project-meta">
-                        <span class="project-date">December 2023</span>
+                        <span class="project-date">December 2025</span>
                         <a href="#" class="project-link" data-project="1">
                             View Details →
                         </a>
@@ -710,7 +710,7 @@
                         <span class="tag">HealthKit</span>
                     </div>
                     <div class="project-meta">
-                        <span class="project-date">October 2023</span>
+                        <span class="project-date">October 2025</span>
                         <a href="#" class="project-link" data-project="2">
                             View Details →
                         </a>
@@ -740,7 +740,7 @@
                         <span class="tag">User Testing</span>
                     </div>
                     <div class="project-meta">
-                        <span class="project-date">August 2023</span>
+                        <span class="project-date">June 2025</span>
                         <a href="#" class="project-link" data-project="3">
                             View Details →
                         </a>
@@ -770,7 +770,7 @@
                         <span class="tag">Socket.io</span>
                     </div>
                     <div class="project-meta">
-                        <span class="project-date">June 2023</span>
+                        <span class="project-date">July 2025</span>
                         <a href="#" class="project-link" data-project="4">
                             View Details →
                         </a>
@@ -800,7 +800,7 @@
                         <span class="tag">Google Maps</span>
                     </div>
                     <div class="project-meta">
-                        <span class="project-date">April 2023</span>
+                        <span class="project-date">Agustus 2025</span>
                         <a href="#" class="project-link" data-project="5">
                             View Details →
                         </a>
@@ -830,7 +830,7 @@
                         <span class="tag">API Integration</span>
                     </div>
                     <div class="project-meta">
-                        <span class="project-date">February 2023</span>
+                        <span class="project-date">May 2025</span>
                         <a href="#" class="project-link" data-project="6">
                             View Details →
                         </a>
@@ -867,7 +867,7 @@
     <footer class="footer">
         <div class="footer-content">
             <div class="logo" style="color: white; margin-bottom: 1rem;">Portfolio</div>
-            <p>© 2024 Creative Developer. All rights reserved.</p>
+            <p>© 2025 Creative Developer. All rights reserved.</p>
             
             <div class="social-links">
                 <a href="#" class="social-link">📘</a>
@@ -887,7 +887,7 @@
                 description: "A comprehensive e-commerce management system with real-time analytics, inventory management, customer insights, order processing, and payment integration. The dashboard provides merchants with complete control over their online store with intuitive UI and powerful analytics tools.",
                 tags: ["React", "Node.js", "MongoDB", "Stripe", "Redux", "Chart.js"],
                 image: "https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/658077ca-5b88-4ee8-9199-46e953d91a34.png",
-                date: "December 2023",
+                date: "December 2025",
                 live: "#",
                 github: "#"
             },
@@ -897,7 +897,7 @@
                 description: "A comprehensive fitness tracking application that helps users monitor workouts, set personalized goals, track progress with detailed analytics, and connect with fitness communities. Includes features like workout plans, calorie tracking, social sharing, and integration with health devices.",
                 tags: ["React Native", "Firebase", "Redux", "HealthKit", "Google Fit", "Push Notifications"],
                 image: "https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/3311538d-d1e9-4e68-b43b-0b4953a69db5.png",
-                date: "October 2023",
+                date: "October 2025",
                 live: "#",
                 github: "#"
             },
@@ -907,7 +907,7 @@
                 description: "Complete redesign of a corporate website focusing on modern design principles, improved user experience, accessibility, and performance optimization. The project involved user research, wireframing, prototyping, and implementation with a mobile-first approach.",
                 tags: ["Figma", "Adobe XD", "Prototyping", "User Testing", "Accessibility", "Responsive Design"],
                 image: "https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/df7d1269-d0f8-4af1-a6a0-066b5650e3ee.png",
-                date: "August 2023",
+                date: "June 2025",
                 live: "#",
                 github: "#"
             },
@@ -917,7 +917,7 @@
                 description: "A collaborative project management platform featuring task management, team collaboration, real-time updates, file sharing, time tracking, and reporting. Built with modern web technologies for seamless team coordination and project planning.",
                 tags: ["Vue.js", "Express.js", "PostgreSQL", "Socket.io", "JWT", "WebSockets"],
                 image: "https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/9011dfb3-b348-4c7d-83db-3a59d7a69197.png",
-                date: "June 2023",
+                date: "July 2025",
                 live: "#",
                 github: "#"
             },
@@ -927,7 +927,7 @@
                 description: "A full-featured food delivery application with restaurant discovery, menu browsing, real-time order tracking, secure payments, and delivery management. Includes features like user reviews, favorite restaurants, and personalized recommendations.",
                 tags: ["Flutter", "Dart", "Firebase", "Google Maps", "Stripe", "Push Notifications"],
                 image: "https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/2a6f02ce-d538-4fac-8f44-301fd483a931.png",
-                date: "April 2023",
+                date: "Agustus 2025",
                 live: "#",
                 github: "#"
             },
@@ -937,7 +937,7 @@
                 description: "An advanced data visualization platform with interactive charts, real-time analytics, custom reporting, and predictive insights. Designed for businesses to analyze their data and make informed decisions with intuitive visual representations.",
                 tags: ["D3.js", "Python", "Chart.js", "API Integration", "Data Processing", "Machine Learning"],
                 image: "https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/091d652e-3fba-4b25-8c7b-75c0f332d2e8.png",
-                date: "February 2023",
+                date: "May 2025",
                 live: "#",
                 github: "#"
             }
@@ -1111,4 +1111,3 @@
     </script>
 </body>
 </html>
-
